<resources>
    <string name="app_name">Diary</string>
    <string name="tarea">Tarea</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="agregar">Agregar</string>
    <string name="cambiar_fecha">Cambiar Fecha</string>
    <string name="descripcionFormulario">Descripcion</string>
    <string name="nombre_tarea">Nombre Tarea</string>
    <string name="descripcionRecycle">Descripcion:</string>
    <string name="fechaRecycle">Fecha:</string>
    <string name="tareaRecycle">Tarea:</string>
</resources>
