<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.profuturo.todo.addingTask"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtViewAgregarTarea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tarea"
        android:textSize="18sp"
        tools:text="Tarea"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre Tarea"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorLink="@android:color/transparent"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewAgregarTarea"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtViewAgregarDescripcion"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:text="@string/descripcion"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtTask"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTask"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtTask" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="Descripcion"
        android:inputType="text|textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtViewAgregarDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/txtViewAgregarDescripcion"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtViewAgregarDescripcion" />

    <TextView
        android:id="@+id/txtViewAgregarFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtDescripcion"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtDescripcion" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:contextClickable="true"
        android:ems="10"
        android:inputType="none"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtViewAgregarFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtViewAgregarFecha"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtViewAgregarFecha" />

    <Button
        android:id="@+id/btnAgregarFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:onClick="onClickDate"
        android:text="Cambiar Fecha"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtDate"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtDate" />

    <Button
        android:id="@+id/btnNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:onClick="onClickNewTask"
        android:text="Agregar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregarFecha"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
